crates/strider-analyze/tests/snapshots/v2__mips64be__calling_convention__mixed_4.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x120000fa0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "7" -> "1" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "8" -> "1" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "9" -> "1" [color="#ff8800", label=arg5, fontcolor="#cccccc", fontsize=9];
  "10" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "1" -> "10" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "11" -> "10" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "12" -> "10" [color="#88cc88", label=v0, fontcolor="#cccccc", fontsize=9];
  "v13" [label="Post Call\nv1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v13" [color="#888888", style=dashed];
  "v13" -> "10" [color="#88cc88", label=v1, fontcolor="#cccccc", fontsize=9];
  "v14" [label="Post Call\nf0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v14" [color="#888888", style=dashed];
  "v14" -> "10" [color="#88cc88", label=f0, fontcolor="#cccccc", fontsize=9];
  "v15" [label="Post Call\nf2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v15" [color="#888888", style=dashed];
  "v15" -> "10" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "12" [label="Xor:u64", shape=box, fillcolor="#2d2d2d"];
  "16" -> "12" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "17" -> "12" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "17" [label="SignExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "18" -> "17" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "18" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "19" -> "18" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "20" -> "18" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "20" [label="Neg\nu32 → u32", shape=box, fillcolor="#2d2d2d"];
  "v21" [label="Post Call\na2_lo", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v21" [color="#888888", style=dashed];
  "v21" -> "20" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "19" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v22" [label="Post Call\na0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v22" [color="#888888", style=dashed];
  "v22" -> "19" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "16" [label="SignExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "23" -> "16" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "23" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "11" -> "23" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v24" [label="Post Call\na1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v24" [color="#888888", style=dashed];
  "v24" -> "23" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "11" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "25" -> "11" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v26" [label="Post Call\na3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v26" [color="#888888", style=dashed];
  "v26" -> "11" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "18" -> "11" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "25" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "1" -> "25" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v24" -> "25" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "27" -> "25" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "27" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v13" -> "27" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "9" [label="init\nra", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="SignExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "28" -> "8" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "28" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "5" -> "28" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "5" [label="arg[1] ← a1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "7" [label="arg[3] ← a3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "6" [label="arg[2] ← a2_lo", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="arg[0] ← a0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "29" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "30" -> "2" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "31" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "31" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "7" -> "31" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "30" [label="Load u64\n← ram", shape=box3d, fillcolor="#102030"];
  "32" -> "30" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "33" -> "30" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "33" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "34" -> "33" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "35" -> "33" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "35" [label="const 0x10000000000010df0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "34" [label="init\nt9", shape=Mdiamond, fillcolor="#1a3a5c"];
  "32" [label="StackStore u64\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "36" -> "32" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v37" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v37" -> "32" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "38" -> "32" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "38" [label="init\ngp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "36" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "29" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "39" -> "29" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "40" -> "29" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "6" -> "29" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "40" [label="Load u64\n← ram", shape=box3d, fillcolor="#102030"];
  "32" -> "40" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "41" -> "40" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "41" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "34" -> "41" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "42" -> "41" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "42" [label="const 0x10000000000010db8:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "39" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "43" -> "39" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "30" -> "39" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "28" -> "39" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "43" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "44" -> "43" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "40" -> "43" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "45" -> "43" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "45" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "4" -> "45" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "44" [label="StackStore u64\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "32" -> "44" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v46" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v46" -> "44" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "9" -> "44" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
}
